# dllm

./: README.md  pyproject.toml
dllm/core/samplers/: bd3lm.py
dllm/core/trainers/: bd3lm.py  mdlm.py  utils.py
dllm/core/trainers/utils/: __init__.py  metrics.py
dllm/data/: s1k.py
dllm/pipelines/a2d/: __init__.py  convert.py  eval.py
dllm/pipelines/bert/: eval.py
dllm/pipelines/dream/: eval.py  trainer.py
dllm/pipelines/editflow/: __init__.py  convert.py  sampler.py
dllm/pipelines/llada/: eval.py
dllm/tools/: preprocess_sft_dataset.py
dllm/utils/: configs.py  models.py
examples/a2d/: README.md
examples/a2d/bd3lm/: pt.py  sft.py
examples/a2d/mdlm/: pt.py  sft.py
examples/bert/: README.md  pt.py  sft.py
examples/dream/: README.md  pt.py  sft.py
examples/editflow/: README.md  chat.py  pt.py  sample.py  sft.py
examples/editflow/legacy/: README.md  sample.py
examples/editflow/legacy/bert/: README.md  pt.py  sft.py
examples/editflow/legacy/dream/: pt.py  sft.py
examples/editflow/legacy/llada/: pt.py  sft.py
examples/llada/: README.md  pt.py  sft.py
scripts/tests/: test_attention.py
